test/cli/test-validating-policy/with-namespaceObject-2/policy.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: check-deployment-namespace
spec:
  matchConstraints:
    resourceRules:
    - apiGroups:
      - apps
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - deployments
  matchConditions:
     - name: check-labels
       expression: "has(object.metadata.labels) && 'app' in object.metadata.labels && object.metadata.labels['app'] == 'nginx'"
  validations:
  - expression: "namespaceObject.metadata.name != 'default'"
    message: "Using 'default' namespace is not allowed for pod controllers."
